--- a/www/index.html
+++ b/www/index.html
@@ -6,12 +6,18 @@ and open the template in the editor.
 -->
 <html>
     <head>
-        <title>InlämningsUpg1</title>
+        <title>Blogg</title>
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
-         <link rel="stylesheet" href="css/all.css" type="text/css"/>
+        <link rel="stylesheet" href="css/all.css" type="text/css"/>
+        <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.4/jquery.min.js"></script>
+        <script src="js/main.js"></script>
+        <!--script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script-->
     </head>
     <body>
-       <h1 class="well">TODO write content</h1>
+        <div class="header header-background" id="header"></div>
+        <div class="content" id="content"></div>
+        <div class="footer-container-main" id="footer-container-main"></div>
+
     </body>
 </html>
