--- a/www/index.html
+++ b/www/index.html
@@ -16,8 +16,7 @@ and open the template in the editor.
     </head>
     <body>
         <div class="header header-background" id="header"></div>
-        <div class="sidebar" id="sidebar"></div>
-        <div class="content" id="content"></div>
+        <div class="sidebar-content" id="sidebar-content"></div>
         <div class="footer-container-main" id="footer-container-main"></div>
     </body>
 </html>
