--- a/www/content/sidebar-content.html
+++ b/www/content/sidebar-content.html
@@ -1,7 +1,9 @@
 <div class="container-fluid">
     <div class="row">
         <div class="col-lg-3 col-xs-12 sidebar" id="sidebar">
-            sidebar
+            <!--div class="sidebar-entry">
+                
+            </div-->
         </div>
 
         <div class="col-lg-9 col-xs-12 content" id="content">
