--- a/www/content/sidebar-content.html
+++ b/www/content/sidebar-content.html
@@ -1,12 +1,12 @@
 <div class="container-fluid">
     <div class="row">
-        <div class="col-lg-3 col-xs-12 sidebar" id="sidebar">
-            <!--div class="sidebar-entry">
-                
-            </div-->
+        <div class="col-lg-3 col-md-3 col-xs-12 sidebar" id="sidebar">
+            <div class="sidebar-menu">
+                <img onerror="imageNotFound(this)" src='http://www.mixcont.com/_files/_suw16_b/images/menu-mobile-light-grey.png'>
+            </div>
         </div>
 
-        <div class="col-lg-9 col-xs-12 content" id="content">
+        <div class="col-lg-9 col-md-9 col-xs-12 content" id="content">
             
         </div>
     </div>
