--- a/www/content/sidebar-content.html
+++ b/www/content/sidebar-content.html
@@ -2,7 +2,7 @@
     <div class="row">
         <div class="col-lg-3 col-md-3 col-xs-12 sidebar" id="sidebar">
             <div class="sidebar-menu">
-                <img onerror="imageNotFound(this)" src='http://www.mixcont.com/_files/_suw16_b/images/menu-mobile-light-grey.png'>
+                <img src='http://www.mixcont.com/_files/_suw16_b/images/menu-mobile-light-grey.png'>
             </div>
         </div>
 
