--- a/www/content/sidebar-content.html
+++ b/www/content/sidebar-content.html
@@ -7,6 +7,7 @@
         </div>
 
         <div class="col-lg-9 col-md-9 col-xs-12 content" id="content">
-            
+
         </div>
     </div>
+</div>
