--- a/www/content/footer.html
+++ b/www/content/footer.html
@@ -5,6 +5,7 @@
             <div class="row rowThird">
                 <div class="col-xs-12">
                     <div class="footer-standard-margin footer-padding-left-right">
+                        <div class="fb-like" data-href="http://www.asite.se" data-send="false" data-layout="button_count" data-width="200" data-show-faces="true"></div>
                         <a>Partners</a> 
                         <a>Contrebutors</a>
                         <a>Projects</a>
@@ -16,6 +17,7 @@
             <div class="row rowThird">
                 <div class="col-md-12 hidden-sm hidden-xs">
                     <div class="footer-padding-left-right">
+                        
                         <p class="footer-standard-margin">Nygatan 10, Malmö</p>
                         <p>Call us at: +4670514657</p>
                     </div>
