--- a/www/content/footer.html
+++ b/www/content/footer.html
@@ -4,7 +4,7 @@
 
             <div class="row rowThird">
                 <div class="col-xs-12">
-                    <div class="footer-standard-margin footer-padding-left-right">
+                    <div class="footer-column">
                         <div class="fb-like" data-href="http://www.asite.se" data-send="false" data-layout="button_count" data-width="200" data-show-faces="true"></div>
                         <a>Partners</a> 
                         <a>Contrebutors</a>
@@ -15,18 +15,18 @@
             </div>
 
             <div class="row rowThird">
-                <div class="col-md-12 hidden-sm hidden-xs">
-                    <div class="footer-padding-left-right">
-                        
-                        <p class="footer-standard-margin">Nygatan 10, Malmö</p>
+                <div class="col-xs-12">
+                    <div class="footer-column">
+                        <p>Nygatan 10, Malmö</p>
                         <p>Call us at: +4670514657</p>
+                        <p>asa@hotmail.com</p>
                     </div>
                 </div>
             </div>
 
             <div class="row rowThird">
                 <div class="col-xs-12">
-                    <p class='footer-last center-vertically footer-padding-left-right'>Åsas Blogg</p>
+                    <p class='footer-last center-vertically footer-column'>Åsas Blogg</p>
                 </div>
             </div>
 
