--- a/www/index.html
+++ b/www/index.html
@@ -13,7 +13,8 @@ and open the template in the editor.
         <link href="https://fonts.googleapis.com/css?family=Gabriela" rel="stylesheet"> 
         <!--script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.4/jquery.min.js"></script-->
         <script src="js/jquery-1.9.1.js"></script>
-        <script src="js/main.js"></script>
+        <script src="js/main_sql.js"></script>
+         <!--script src="js/main.js"></script-->
         <script src="js/responsive.js"></script>
         <!--script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script-->
     </head>
